<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.gtc.users_add">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo_l" />

    <RelativeLayout

        style="@style/main_page"
        android:layout_below="@+id/imageView"

        >


        <RelativeLayout
            android:id="@+id/navbar"
            style="@style/navbar"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/back_bt"
                style="@style/navbar_back_button"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/logout_bt"
                android:layout_toStartOf="@+id/logout_bt"
                android:onClick="goBack"

                />



            <ImageButton
                android:id="@+id/logout_bt"
                style="@style/navbar_logout_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@+id/home_bt"
                android:layout_toStartOf="@+id/home_bt"
                android:onClick="goOut"

                />

            <TextView
                android:id="@+id/textView"
                style="@style/navbar_title"
                android:text="@string/newuers" />

            <ImageView
                android:id="@+id/nav_line"
                style="@style/line"
                android:layout_below="@+id/textView" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/main_data"

            android:layout_below="@+id/navbar">


            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:paddingBottom="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/new_uesr_name"
                        style="@style/form_input_text"

                        android:layout_gravity="center_horizontal"
                        android:ems="10"

                        android:hint="@string/name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/new_uesr_email"
                        style="@style/form_input_text"

                        android:ems="10"

                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/new_uesr_password"
                        style="@style/form_input_text"

                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />


                    <EditText
                        android:id="@+id/new_uesr_repassword"
                        style="@style/form_input_text"


                        android:ems="10"
                        android:hint="@string/repassword"
                        android:inputType="textPassword"

                        />

                    <EditText
                        android:id="@+id/new_uesr_phone"
                        style="@style/form_input_text"


                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="textPassword"

                        />

                    <EditText
                        android:id="@+id/new_uesr_address"
                        style="@style/form_input_textarea"
                        android:ems="10"
                        android:hint="@string/adress"
                        android:inputType="textPassword"

                        />


                    <Button
                        android:id="@+id/button8"
                        style="@style/button"
                        android:onClick="naw_userRegSend"
                        android:text="@string/send"
                      />
                </LinearLayout>






            </ScrollView>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
