<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.update">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo_l"

        android:layout_marginTop="100dp"
       />

    <RelativeLayout

        style="@style/min_main_page"
        android:layout_below="@+id/imageView"
        android:id="@+id/relativeLayout3">


        <RelativeLayout
            android:id="@+id/navbar"
            style="@style/navbar"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textView"
                style="@style/navbar_title"
                android:text="@string/login_title" />

            <ImageView
                android:id="@+id/nav_line"
                style="@style/line"
                android:layout_below="@+id/textView" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/main_data"

            android:layout_below="@+id/navbar">


            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:paddingBottom="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/login_email"
                        style="@style/form_input_text"

                        android:layout_gravity="center_horizontal"
                        android:ems="10"

                        android:hint="@string/email"

                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/form_input_text"

                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />











            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="80dp"
android:layout_marginTop="10dp"


                >

                <Button
                    android:id="@+id/newuser"
                    style="@style/likebutton"
                    android:onClick="togoNewUser"

                    android:text="@string/newuers"


                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button8"
                    style="@style/button"
                    android:onClick="login"

                    android:text="@string/send"

                    android:layout_alignBottom="@+id/newuser"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

                </LinearLayout>

            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>

    <Button
        style="@style/likebutton"
        android:onClick="gotoAboutUS"

        android:text="@string/aboutus"
android:textSize="10dp"
        android:layout_height="20dp"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true" />


</RelativeLayout>
